--- a/Copia de Avance#2/Html/HomePage.html
+++ b/Copia de Avance#2/Html/HomePage.html
@@ -9,14 +9,23 @@
 <body>
   <header>
     <h1 class="logo">Soluna</h1>
-    <nav>
-      <ul class="menu">
-        <li><a href="#">Menú</a></li>
-        <li><a href="#">Reservas</a></li>
-        <li><a href="#">Pedidos</a></li>
-        <li><a href="#">Atencion al Cliente</a></li>
+    <nav> 
+  <ul class="menu">
+    <li><a href="#">Menú</a></li>
+    <li><a href="#">Reservas</a></li>
+    <li><a href="#">Pedidos</a></li>
+
+    <li class="submenu-container">
+      <a href="#">Atención al Cliente</a>
+      <ul class="submenu">
+        <li><a href="RegistroSolicitud.html">Realizar Solicitud</a></li>
+        <li><a href="VerificarSolicitud.html">Verificar Solicitud</a></li>
+    
       </ul>
-    </nav>
+    </li>
+  </ul>
+</nav>
+
   </header>
 
   <section class="hero">
