--- a/Copia de Avance#2/Html/menu.html
+++ b/Copia de Avance#2/Html/menu.html
@@ -6,12 +6,14 @@
   <title>Menú Soluna</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="../Styles/styles.css">
+  <link rel="stylesheet" href="../Styles/menu.css">
 </head>
 <body>
   <div class="container-fluid">
     <div class="row min-vh-100">
-      <aside class="col-md-3 text-white p-4 bg-dark">
+
+      <!-- ASIDE: menú lateral -->
+      <aside class="col-md-3 text-white p-4">
         <h4 class="mb-4">Menú</h4>
         <ul class="nav flex-column">
           <li class="nav-item"><a class="nav-link text-white" href="#pizzas">Pizzas</a></li>
@@ -19,8 +21,12 @@
           <li class="nav-item"><a class="nav-link text-white" href="#pastas">Pastas</a></li>
         </ul>
       </aside>
+
+      <!-- CONTENIDO PRINCIPAL -->
       <main class="col-md-9 p-4">
-        <h1 class="card-title mb-4 text-center" style="color: #d35400;">Menú de Pizzas</h1>
+
+        <h2 class="mb-4" id="pizzas">Menú de Pizzas</h2>
+
         <div class="table-responsive mb-5">
           <table class="table table-bordered">
             <thead>
@@ -41,7 +47,7 @@
               <tr><td><b>De la Casa</b></td><td>Chile dulce, cebolla morada, jamón, pepperoni, tocineta, alcachofas, aceitunas, hongos y tomate cherry</td><td>₡4800</td><td>₡8500</td><td>₡10500</td></tr>
               <tr><td><b>Vegetariana</b></td><td>Chile dulce, cebolla morada, alcachofas, aceitunas, tomate cherry, hongos y aguacate</td><td>₡5000</td><td>₡8500</td><td>₡11000</td></tr>
               <tr><td><b>Serrano</b></td><td>Tomate cherry, jamón serrano, parmesano y arúgula</td><td>₡5500</td><td>₡9000</td><td>₡12000</td></tr>
-              <tr><td><b>Rústica</td><td>Cebolla morada, pepperoni y aguacate</td><td>₡5000</td><td>₡8500</td><td>₡11000</td></tr>
+              <tr><td><b>Rústica</b></td><td>Cebolla morada, pepperoni y aguacate</td><td>₡5000</td><td>₡8500</td><td>₡11000</td></tr>
               <tr><td><b>Camarones</b></td><td>Tomate cherry, cebolla morada y camarones al ajillo</td><td>₡6000</td><td>₡10000</td><td>₡13000</td></tr>
             </tbody>
           </table>
@@ -97,6 +103,7 @@
         </ul>
 
         <p class="mt-4 fw-bold">Todas las hamburguesas incluyen papas fritas. Torta y pan hechos por nosotros.</p>
+
       </main>
     </div>
   </div>
