--- a/Copia de Avance#2/Html/menu.html
+++ b/Copia de Avance#2/Html/menu.html
@@ -6,7 +6,7 @@
   <title>Menú Soluna</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="../Styles/menu.css">
+  <link rel="stylesheet" href="styles/styles.css" />
 </head>
 <body>
   <div class="container-fluid">
