--- a/Copia de Avance#2/Html/VerificarSolicitud.html
+++ b/Copia de Avance#2/Html/VerificarSolicitud.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
   <title>Verificación de Solicitudes</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
- <link rel="stylesheet" href="../Styles/styles.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../Styles/styles.css" />
   <script src="../javascript/script.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
 </head>
+
 <body>
- <div id="header"></div>
+  <div id="header"></div>
   <main class="container mt-5">
     <div class="card shadow-sm">
       <div class="card-body">
-       
- <h1 class="card-title mb-4 text-center" style="color: #e67e22;">
- Verificación de Solicitudes
-</h1>
+
+        <h1 class="card-title mb-4" style="color: #e67e22;">
+          Verificación de Solicitudes
+        </h1>
+
         <div class="table-responsive">
           <table class="table table-bordered table-hover">
             <thead class="thead-light">
@@ -56,7 +59,8 @@
   </main>
 
   <!-- Modal -->
-  <div class="modal fade" id="modalOrden" tabindex="-1" role="dialog" aria-labelledby="modalOrdenLabel" aria-hidden="true">
+  <div class="modal fade" id="modalOrden" tabindex="-1" role="dialog" aria-labelledby="modalOrdenLabel"
+    aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
       <form class="modal-content" id="formOrden">
         <div class="modal-header bg-primary text-white">
@@ -69,7 +73,8 @@
         <div class="modal-body">
           <div class="form-group">
             <label for="descripcion" class="form-label">Respuesta:</label>
-            <textarea id="descripcion" class="form-control" rows="5" placeholder="Escriba su respuesta aquí..."></textarea>
+            <textarea id="descripcion" class="form-control" rows="5"
+              placeholder="Escriba su respuesta aquí..."></textarea>
           </div>
         </div>
 
